tested-m3u8-formate-with-videojs

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "prettier": "^3.0.1",
     "sass": "^1.64.2",
+    "video.js": "^8.5.2",
     "vite": "^4.4.5"
   }
 }
